--- a/bobura_core/bobura_core.vcxproj
+++ b/bobura_core/bobura_core.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="include\bobura\view\timetable\header.h" />
     <ClInclude Include="include\bobura\view\timetable\item.h" />
     <ClInclude Include="include\bobura\view\timetable\traits.h" />
+    <ClInclude Include="include\bobura\view\timetable\utility.h" />
     <ClInclude Include="include\bobura\view_picture_box.h" />
   </ItemGroup>
   <ItemGroup>
@@ -234,6 +235,7 @@
     <ClCompile Include="src\bobura.view.scale_list.cpp" />
     <ClCompile Include="src\bobura.view.timetable.header.cpp" />
     <ClCompile Include="src\bobura.view.timetable.item.cpp" />
+    <ClCompile Include="src\bobura.view.timetable.utility.cpp" />
     <ClCompile Include="src\bobura.view_picture_box.cpp" />
   </ItemGroup>
   <ItemGroup>
