--- a/bobura_core/bobura_core.test.vcxproj
+++ b/bobura_core/bobura_core.test.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="test\test_bobura.view.scale_list.cpp" />
     <ClCompile Include="test\test_bobura.view.timetable.header.cpp" />
     <ClCompile Include="test\test_bobura.view.timetable.item.cpp" />
+    <ClCompile Include="test\test_bobura.view.timetable.utility.cpp" />
     <ClCompile Include="test\test_bobura.view_picture_box.cpp" />
   </ItemGroup>
   <ItemGroup>
