--- a/bobura_core/bobura_core.vcxproj.filters
+++ b/bobura_core/bobura_core.vcxproj.filters
@@ -294,6 +294,9 @@
     <ClInclude Include="include\bobura\view\timetable\item.h">
       <Filter>headers\bobura\view\timetable</Filter>
     </ClInclude>
+    <ClInclude Include="include\bobura\view\timetable\utility.h">
+      <Filter>headers\bobura\view\timetable</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\precompiled\precompiled.cpp">
@@ -450,6 +453,9 @@
       <Filter>sources\bobura\view\timetable</Filter>
     </ClCompile>
     <ClCompile Include="src\bobura.view.timetable.item.cpp">
+      <Filter>sources\bobura\view\timetable</Filter>
+    </ClCompile>
+    <ClCompile Include="src\bobura.view.timetable.utility.cpp">
       <Filter>sources\bobura\view\timetable</Filter>
     </ClCompile>
   </ItemGroup>
