--- a/bobura_core/bobura_core.test.vcxproj.filters
+++ b/bobura_core/bobura_core.test.vcxproj.filters
@@ -233,6 +233,9 @@
     <ClCompile Include="test\test_bobura.view.timetable.utility.cpp">
       <Filter>sources\test_bobura\view\timetable</Filter>
     </ClCompile>
+    <ClCompile Include="test\test_bobura.message.diagram_view.cpp">
+      <Filter>sources\test_bobura\message</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="res.test\win32\bobura_core.test.exe.manifest">
