Create bobura::view::timetable::train_number_header #102

--- a/bobura_core/bobura_core.test.vcxproj.filters
+++ b/bobura_core/bobura_core.test.vcxproj.filters
@@ -236,6 +236,9 @@
     <ClCompile Include="test\test_bobura.message.diagram_view.cpp">
       <Filter>sources\test_bobura\message</Filter>
     </ClCompile>
+    <ClCompile Include="test\test_bobura.view.timetable.train_number_header.cpp">
+      <Filter>sources\test_bobura\view\timetable</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="res.test\win32\bobura_core.test.exe.manifest">
