--- a/bobura_core/bobura_core.vcxproj.filters
+++ b/bobura_core/bobura_core.vcxproj.filters
@@ -297,6 +297,9 @@
     <ClInclude Include="include\bobura\view\timetable\utility.h">
       <Filter>headers\bobura\view\timetable</Filter>
     </ClInclude>
+    <ClInclude Include="include\bobura\view\timetable\train_number_header.h">
+      <Filter>headers\bobura\view\timetable</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\precompiled\precompiled.cpp">
@@ -456,6 +459,9 @@
       <Filter>sources\bobura\view\timetable</Filter>
     </ClCompile>
     <ClCompile Include="src\bobura.view.timetable.utility.cpp">
+      <Filter>sources\bobura\view\timetable</Filter>
+    </ClCompile>
+    <ClCompile Include="src\bobura.view.timetable.train_number_header.cpp">
       <Filter>sources\bobura\view\timetable</Filter>
     </ClCompile>
   </ItemGroup>
