Create bobura::view::timetable::station_list and train_list #102

--- a/bobura_core/bobura_core.test.vcxproj.filters
+++ b/bobura_core/bobura_core.test.vcxproj.filters
@@ -239,6 +239,12 @@
     <ClCompile Include="test\test_bobura.view.timetable.train_number_header.cpp">
       <Filter>sources\test_bobura\view\timetable</Filter>
     </ClCompile>
+    <ClCompile Include="test\test_bobura.view.timetable.station_list.cpp">
+      <Filter>sources\test_bobura\view\timetable</Filter>
+    </ClCompile>
+    <ClCompile Include="test\test_bobura.view.timetable.train_list.cpp">
+      <Filter>sources\test_bobura\view\timetable</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="res.test\win32\bobura_core.test.exe.manifest">
