Create bobura/view/utility.h and bobura.view.utility.cpp #102

--- a/bobura_core/bobura_core.test.vcxproj
+++ b/bobura_core/bobura_core.test.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="test\test_bobura.view.timetable.train_list.cpp" />
     <ClCompile Include="test\test_bobura.view.timetable.train_number_header.cpp" />
     <ClCompile Include="test\test_bobura.view.timetable.utility.cpp" />
+    <ClCompile Include="test\test_bobura.view.utility.cpp" />
     <ClCompile Include="test\test_bobura.view_picture_box.cpp" />
   </ItemGroup>
   <ItemGroup>
