--- a/bobura_core/bobura_core.vcxproj
+++ b/bobura_core/bobura_core.vcxproj
@@ -181,6 +181,7 @@
     <ClInclude Include="include\bobura\view\timetable\train_number_header.h" />
     <ClInclude Include="include\bobura\view\timetable\traits.h" />
     <ClInclude Include="include\bobura\view\timetable\utility.h" />
+    <ClInclude Include="include\bobura\view\utility.h" />
     <ClInclude Include="include\bobura\view_picture_box.h" />
   </ItemGroup>
   <ItemGroup>
@@ -242,6 +243,7 @@
     <ClCompile Include="src\bobura.view.timetable.train_list.cpp" />
     <ClCompile Include="src\bobura.view.timetable.train_number_header.cpp" />
     <ClCompile Include="src\bobura.view.timetable.utility.cpp" />
+    <ClCompile Include="src\bobura.view.utility.cpp" />
     <ClCompile Include="src\bobura.view_picture_box.cpp" />
   </ItemGroup>
   <ItemGroup>
