--- a/bobura_core/bobura_core.vcxproj.filters
+++ b/bobura_core/bobura_core.vcxproj.filters
@@ -306,6 +306,9 @@
     <ClInclude Include="include\bobura\view\timetable\train_list.h">
       <Filter>headers\bobura\view\timetable</Filter>
     </ClInclude>
+    <ClInclude Include="include\bobura\view\utility.h">
+      <Filter>headers\bobura\view</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\precompiled\precompiled.cpp">
@@ -475,6 +478,9 @@
     </ClCompile>
     <ClCompile Include="src\bobura.view.timetable.train_list.cpp">
       <Filter>sources\bobura\view\timetable</Filter>
+    </ClCompile>
+    <ClCompile Include="src\bobura.view.utility.cpp">
+      <Filter>sources\bobura\view</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
