--- a/bobura_core/test/Makefile.am
+++ b/bobura_core/test/Makefile.am
@@ -106,7 +106,7 @@ bobura_core_test_LDADD = \
     $(UNITTEST_LIBS)
 bobura_core_test_SOURCES = $(headers) $(sources)
 
-$(top_builddir)/precompiled/precompiled.h.gch: $(top_srcdir)/precompiled/precompiled.h
+$(top_builddir)/precompiled/precompiled.h.$(PRECOMPILE_EXT): $(top_srcdir)/precompiled/precompiled.h
 	pushd $(top_builddir)/precompiled; \
 	$(MAKE) all; \
 	popd
