--- a/bobura_model/test/Makefile.am
+++ b/bobura_model/test/Makefile.am
@@ -67,7 +67,7 @@ bobura_model_test_LDADD = \
     $(UNITTEST_LIBS)
 bobura_model_test_SOURCES = $(headers) $(sources)
 
-$(top_builddir)/precompiled/precompiled.h.gch: $(top_srcdir)/precompiled/precompiled.h
+$(top_builddir)/precompiled/precompiled.h.$(PRECOMPILE_EXT): $(top_srcdir)/precompiled/precompiled.h
 	pushd $(top_builddir)/precompiled; \
 	$(MAKE) all; \
 	popd
