--- a/bobura_model/src/Makefile.am
+++ b/bobura_model/src/Makefile.am
@@ -34,9 +34,9 @@ EXTRA_DIST = $(extra_headers) $(extra_sources)
 libbobura_model_a_CPPFLAGS = \
     -I$(top_srcdir)/bobura_core/include \
     -I$(top_srcdir)/bobura_model/include \
+    -I$(TETENGO2_GUI_INCLUDE) \
     -I$(TETENGO2_INCLUDE) \
-    -I$(TETENGO2_DETAIL_INCLUDE) \
-    -I$(TETENGO2_GUI_INCLUDE)
+    -I$(TETENGO2_DETAIL_INCLUDE)
 libbobura_model_a_SOURCES = $(headers) $(sources)
 
 $(top_builddir)/precompiled/precompiled.h.$(PRECOMPILE_EXT): $(top_srcdir)/precompiled/precompiled.h
