--- a/bobura/Makefile.am
+++ b/bobura/Makefile.am
@@ -2,7 +2,12 @@
 # Copyright (C) 2007-2017 kaoru
 # $Id$
 
-SUBDIRS = include res src
+SOURCE_SUBDIRS = include src
+
+SUBDIRS = $(SOURCE_SUBDIRS) res
 
 EXTRA_DIST = \
     bobura.vcxproj bobura.vcxproj.filters
+
+lint-iwyu:
+	for d in $(SOURCE_SUBDIRS); do (cd $$d && $(MAKE) lint-iwyu); done
