--- a/bobura_model/include/bobura/Makefile.am
+++ b/bobura_model/include/bobura/Makefile.am
@@ -42,3 +42,18 @@ extra_headers = \
 
 nobase_pkginclude_HEADERS = $(pkg_headers)
 EXTRA_DIST = $(extra_headers)
+
+IWYU_OPTS += -Xiwyu --mapping_file=$(top_srcdir)/$(IWYU_IMP_PATH)
+iwyu_CPPFLAGS = \
+    -I$(top_srcdir)/bobura_core/include \
+    -I$(top_srcdir)/bobura_model/include \
+    -I$(TETENGO2_GUI_INCLUDE) \
+    -I$(TETENGO2_INCLUDE) \
+    -I$(TETENGO2_DETAIL_INCLUDE)
+
+lint-iwyu:
+	for f in $(pkg_headers); \
+	do \
+	    echo "iwyu: "$$f; \
+	    $(IWYU) $(IWYU_OPTS) $(CPPFLAGS) $(iwyu_CPPFLAGS) $(CXXFLAGS) $$f || test $$? -eq 2; \
+	done
