--- a/bobura/src/Makefile.am
+++ b/bobura/src/Makefile.am
@@ -21,3 +21,10 @@ lint-iwyu:
 	    echo "iwyu: "$$f; \
 	    $(IWYU) $(IWYU_OPTS) $(CPPFLAGS) $(CXXFLAGS) $$f || test $$? -eq 2; \
 	done
+
+lint-iwyu-extra:
+	for f in $(extra_headers) $(extra_sources); \
+	do \
+	    echo "iwyu: "$$f; \
+	    $(IWYU) $(IWYU_OPTS) $(CPPFLAGS) $(CXXFLAGS) $$f || test $$? -eq 2; \
+	done
