--- a/setup/Makefile.am
+++ b/setup/Makefile.am
@@ -11,3 +11,6 @@ EXTRA_DIST = \
 
 lint-iwyu:
 	for d in $(SOURCE_SUBDIRS); do (cd $$d && $(MAKE) lint-iwyu); done
+
+lint-iwyu-extra:
+	for d in $(SOURCE_SUBDIRS); do (cd $$d && $(MAKE) lint-iwyu-extra); done
