--- a/Makefile.am
+++ b/Makefile.am
@@ -21,12 +21,16 @@ SUBDIRS = \
 EXTRA_DIST = bobura.sln bobura_config.h-original TODO Doxyfile
 
 .PHONY: lint
-lint: lint-includes lint-test-cases lint-type-list-type-duplication
+lint: lint-iwyu lint-test-cases lint-type-list-type-duplication
 
-lint-includes: $(top_srcdir)/lib/tetengo2/tools/check_includes.sh
-	$< $(top_srcdir)
+lint-iwyu: $(top_srcdir)/$(IWYU_IMP_PATH)
+	for d in $(SOURCE_SUBDIRS); do (cd $$d && $(MAKE) lint-iwyu); done
 
-$(top_srcdir)/lib/tetengo2/tools/check_includes.sh:
+.PHONY: lint-iwyu-extra
+lint-iwyu-extra: $(top_srcdir)/$(IWYU_IMP_PATH)
+	for d in $(SOURCE_SUBDIRS); do (cd $$d && $(MAKE) lint-iwyu-extra); done
+
+ $(top_srcdir)/$(IWYU_IMP_PATH):
 	git submodule update --init
 	git submodule foreach 'git checkout -f master && git pull -p'
 
@@ -43,14 +47,6 @@ lint-type-list-type-duplication: $(top_srcdir)/lib/tetengo2/tools/check_type_lis
 $(top_srcdir)/lib/tetengo2/tools/check_type_list_type_duplication.sh:
 	git submodule update --init
 	git submodule foreach 'git checkout -f master && git pull -p'
-
-.PHONY: lint-iwyu
-lint-iwyu:
-	for d in $(SOURCE_SUBDIRS); do (cd $$d && $(MAKE) lint-iwyu); done
-
-.PHONY: lint-iwyu-extra
-lint-iwyu-extra:
-	for d in $(SOURCE_SUBDIRS); do (cd $$d && $(MAKE) lint-iwyu-extra); done
 
 .PHONY: doc
 doc:
