Modify Makefile.am #157

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -3,12 +3,13 @@
 # $Id$
 
 EXTRA_DIST = \
-    typedef_check_ignore.txt \
-    precompiled.template.h \
     checkout_and_build_tetengo2.sh \
-    paths.sh \
     checkout_tetengo2.bat \
     copy_bobura_resource.bat \
+    iwyu_mappings.imp \
     make_installer_zip.bat \
+    paths.sh \
+    precompiled.template.h \
     stdlib_headers.txt \
-    test_case_check_ignore.txt
+    test_case_check_ignore.txt \
+    typedef_check_ignore.txt
