Correct Makefile.ams #162

--- a/setup/src/Makefile.am
+++ b/setup/src/Makefile.am
@@ -25,5 +25,5 @@ lint-iwyu-extra: $(addsuffix .iwyuout, $(extra_headers) $(extra_sources))
 	mv $(addsuffix .tmp, $@) $@
 
 clean-local:
-	-rm -f "*.iwyuout.tmp"
-	-rm -f "*.iwyuout"
+	-rm -f *.iwyuout.tmp
+	-rm -f *.iwyuout
