--- a/bobura/include/Makefile.am
+++ b/bobura/include/Makefile.am
@@ -22,5 +22,5 @@ lint-iwyu-extra:
 	mv $(addsuffix .tmp, $@) $@
 
 clean-local:
-	-rm -f "*.iwyuout.tmp"
-	-rm -f "*.iwyuout"
+	-rm -f *.iwyuout.tmp
+	-rm -f *.iwyuout
