Introduce clang-format #163

--- a/bobura_core/Makefile.am
+++ b/bobura_core/Makefile.am
@@ -15,3 +15,6 @@ lint-iwyu:
 
 lint-iwyu-extra:
 	for d in $(SOURCE_SUBDIRS); do (cd $$d && $(MAKE) lint-iwyu-extra); done
+
+format:
+	for d in $(SOURCE_SUBDIRS); do (cd $$d && $(MAKE) format); done
