--- a/setup/include/setup/Makefile.am
+++ b/setup/include/setup/Makefile.am
@@ -21,6 +21,9 @@ lint-iwyu-extra: $(addsuffix .iwyuout, $(extra_headers))
 	$(IWYU) $(IWYU_OPTS) $(CPPFLAGS) $(CXXFLAGS) $< 2> $(addsuffix .tmp, $@) || test $$? -eq 2
 	mv $(addsuffix .tmp, $@) $@
 
+format:
+	$(top_srcdir)/lib/tetengo2/tools/call_clang-format.sh $(UNIX2DOS) $(CLANGFORMAT) $(pkg_headers) $(extra_headers)
+
 clean-local:
 	-find -name "*.iwyuout.tmp" | xargs rm -f
 	-find -name "*.iwyuout" | xargs rm -f
