Correct Makefile.ams #163

--- a/bobura_model/test/Makefile.am
+++ b/bobura_model/test/Makefile.am
@@ -90,3 +90,8 @@ $(top_builddir)/precompiled/precompiled.h.$(PRECOMPILE_EXT): $(top_srcdir)/preco
 	pushd $(top_builddir)/precompiled; \
 	$(MAKE) all; \
 	popd
+
+$(top_builddir)/bobura_core/src/libbobura_model.a:
+	pushd $(top_builddir)/libbobura_model/src; \
+	$(MAKE) all; \
+	popd
