--- a/bobura_core/test/Makefile.am
+++ b/bobura_core/test/Makefile.am
@@ -134,3 +134,8 @@ $(top_builddir)/bobura_core/src/libbobura_core.a:
 	pushd $(top_builddir)/libbobura_core/src; \
 	$(MAKE) all; \
 	popd
+
+$(top_builddir)/bobura_core/src/libbobura_model.a:
+	pushd $(top_builddir)/libbobura_model/src; \
+	$(MAKE) all; \
+	popd
