--- a/bobura_model/test/Makefile.am
+++ b/bobura_model/test/Makefile.am
@@ -91,7 +91,7 @@ $(top_builddir)/precompiled/precompiled.h.$(PRECOMPILE_EXT): $(top_srcdir)/preco
 	$(MAKE) all; \
 	popd
 
-$(top_builddir)/bobura_core/src/libbobura_model.a:
-	pushd $(top_builddir)/libbobura_model/src; \
+$(top_builddir)/bobura_model/src/libbobura_model.a:
+	pushd $(top_builddir)/bobura_model/src; \
 	$(MAKE) all; \
 	popd
