--- a/bobura_model/include/bobura/Makefile.am
+++ b/bobura_model/include/bobura/Makefile.am
@@ -61,7 +61,7 @@ lint-iwyu-extra: $(addsuffix .iwyuout, $(extra_headers))
 	mv $(addsuffix .tmp, $@) $@
 
 format:
-	$(top_srcdir)/lib/tetengo2/tools/call_clang-format.sh $(UNIX2DOS) $(CLANGFORMAT) $(srcdir) $(pkg_headers) $(extra_headers)
+	$(TETENGO2_TOOLS)/call_clang-format.sh $(UNIX2DOS) $(CLANGFORMAT) $(srcdir) $(pkg_headers) $(extra_headers)
 
 clean-local:
 	-find -name "*.iwyuout.tmp" | xargs rm -f
