Replace boost::filesystem to tetengo2::stdalt::filesystem #165

--- a/configure.ac
+++ b/configure.ac
@@ -134,6 +134,8 @@ AC_SUBST([LIBS], "$BOOST_PROGRAM_OPTIONS_LIB $LIBS")
 AC_SUBST([LIBS], "$BOOST_THREAD_LIB $LIBS")
 AC_SUBST([UNITTEST_LIBS], "$BOOST_UNIT_TEST_FRAMEWORK_LIB")
 
+AC_SUBST([LIBS], "$LIBS -lstdc++fs -lstdc++")
+
 AC_ARG_WITH(
     tetengo2,
     AS_HELP_STRING(
