Create empty .cpp files #174

--- a/bobura_core/bobura_core.vcxproj
+++ b/bobura_core/bobura_core.vcxproj
@@ -220,8 +220,18 @@
     <ClCompile Include="src\bobura.load_save.save_to_file.cpp" />
     <ClCompile Include="src\bobura.main_window.cpp" />
     <ClCompile Include="src\bobura.main_window_menu_builder.cpp" />
+    <ClCompile Include="src\bobura.message.about_dialog.cpp" />
     <ClCompile Include="src\bobura.message.diagram_selection_observer_set.cpp" />
+    <ClCompile Include="src\bobura.message.diagram_view.cpp" />
+    <ClCompile Include="src\bobura.message.file_property_dialog.cpp" />
+    <ClCompile Include="src\bobura.message.font_color_dialog.cpp" />
+    <ClCompile Include="src\bobura.message.main_window.cpp" />
+    <ClCompile Include="src\bobura.message.property_bar.cpp" />
+    <ClCompile Include="src\bobura.message.timetable_model.cpp" />
     <ClCompile Include="src\bobura.message.timetable_model_observer_set.cpp" />
+    <ClCompile Include="src\bobura.message.train_kind_dialog.cpp" />
+    <ClCompile Include="src\bobura.message.view_picture_box.diagram.cpp" />
+    <ClCompile Include="src\bobura.message.view_picture_box.timetable.cpp" />
     <ClCompile Include="src\bobura.property_bar.cpp" />
     <ClCompile Include="src\bobura.settings.cpp" />
     <ClCompile Include="src\bobura.timetable_model.cpp" />
